# hevy-cpp-client

./: .clang-format  .cmake-format.py  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/cmake/: Assert.cmake  Env.cmake  Externals.cmake  RuntimeDependencies.cmake  Toolchain.cmake  UnitTesting.cmake
src/model/: CMakeLists.txt  common.h
src/model/generator/: CMakeLists.txt  api.cpp  source.json
src/model/test/: CMakeLists.txt  quick.cpp
